fixed spacing in header

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -6466,13 +6466,13 @@ th.hide-for-touch {
 .soc2 {
     overflow:hidden;
     margin:0; padding:0;
-    list-style:none;
 }
 
 .soc2 p {
     display:inline-block;
     *display:inline;
     zoom:1;
+    vertical-align: middle;
 }
 
   .soc2 p a {
@@ -6511,9 +6511,9 @@ th.hide-for-touch {
     -moz-border-radius: 6px;
     border-radius: 6px;
     margin-right: 6px;
-    top: 10px;
     color: #bbb;
     background-color: transparent;
+    top: 7px;
 }
 
 .soc2 a:hover {
